@@ -6,7 +6,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class HistoryPersistenceAdapter implements LoadHistoryPort {
@@ -21,7 +20,7 @@ public class HistoryPersistenceAdapter implements LoadHistoryPort {
     public List<History> findByGeneration(Integer generation) {
         return historyJpaRepository.findByGeneration(generation).stream()
                 .map(HistoryMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
